...
//   Widget build(BuildContext context) {
//     return Scaffold(
//       appBar: AppBar(
//         backgroundColor: AppColors.navyBlue,
//         title: Center(
//           child: Text(
//             'Create an Event List',
//             style: TextStyle(
//               color: AppColors.gold,
//               fontFamily: "Pacifico",
//             ),
//           ),
//         ),
...
//                   ),
//                   const SizedBox(height: 16.0),
//                   Padding(
//                     padding: const EdgeInsets.symmetric(horizontal: 120),
//                     child: CustomDropdownButton(
//                       value: selectedEventType,
//                       items: ['Birthday', 'Wedding', 'Anniversary', 'Other'],
//                       onChanged: (String? newValue) {
//                         setState(() {
//                           selectedEventType = newValue;
//                           isOtherEventType = newValue == 'Other';
//                         });
//                       },
...
//                           userId: '', // Will be set in the repository layer using FirebaseAuth
//                         );
//
//                         try {
//                           domainEventRepository.upsertEvent(event).then((_) {
//                             ScaffoldMessenger.of(context).showSnackBar(
//                               const SnackBar(content: Text('Event created successfully!')),
//                             );
//                           }
//                           );
//                           // Navigate to the events list page on success
//                           Navigator.pushNamed(context, '/screen_wrapper');
//                         } catch (e) {
...
//                             SnackBar(content: Text('Failed to add event: $e')),
//                           );
//                         }
//                       }
//                     },
//                     child: Text(
//                       'Add Event',
//                       style: TextStyle(
//                         fontFamily: "Pacifico",
//                         fontSize: 20,
//                         color: AppColors.navyBlue,
//                       ),
//                     ),
...
//             child: Form(
//               key: _formKey,
//               child: Column(
//                 crossAxisAlignment: CrossAxisAlignment.stretch,
//                 children: [
//                   CustomTextFormField(
//                     key: const ValueKey('eventNameField'),
//                     controller: _eventNameController,
//                     labelText: 'Event Name',
//                     hintText: 'My Birthday Event...',
//                     validator: (value) {
//                       if (value == null || value.isEmpty) {
//                         return 'Please enter an event name';
//                       }
//                       return null;
//                     },
//                   ),
//                   const SizedBox(height: 16.0),
//                   CustomTextFormField(
//                     key: const ValueKey('eventLocationField'),
//                     controller: _eventLocationController,
//                     labelText: 'Event Location',
//                     hintText: 'My Place @ Dubai...',
//                     validator: (value) {
//                       if (value == null || value.isEmpty) {
//                         return 'Please enter an event location';
...
//                     },
//                   ),
//                   const SizedBox(height: 16.0),
//                   Padding(
//                     padding: const EdgeInsets.symmetric(horizontal: 120),
//                     child: CustomDropdownButton(
//                       key: const ValueKey('eventTypeDropdown'),
//                       value: selectedEventType,
//                       items: ['Birthday', 'Wedding', 'Anniversary', 'Other'],
//                       onChanged: (String? newValue) {
//                         setState(() {
//                           selectedEventType = newValue;
//                           isOtherEventType = newValue == 'Other';
...
//                       ),
//                     ),
//                   ),
//                   const SizedBox(height: 16.0),
//
//                   CustomTextFormField(
//                     key: const ValueKey('eventDescriptionField'),
//                     controller: _eventDescriptionController,
//                     labelText: 'Event Description',
//                     hintText: 'Enter event details...',
//                     keyboardType: TextInputType.multiline,
//                     validator: (value) {
//                       if (value == null || value.isEmpty) {
...
                    ),

                  const SizedBox(height: 16.0),

                  // Event Date Field
                  GestureDetector(
                    key: const ValueKey('eventDateField'),
                    onTap: () => _selectEventDate(context),
                    child: AbsorbPointer(
                      child: CustomTextFormField(
                        controller: _eventDateController,
                        labelText: 'Event Date',
                        hintText: 'DD/MM/YYYY',
...
